--- a/turtlebot3_gazebo/models/robot_world/model.config
+++ b/turtlebot3_gazebo/models/robot_world/model.config
@@ -3,13 +3,12 @@
 <model>
   <name>robot_world</name>
   <version>1.0</version>
-  <sdf version="1.5">model.sdf</sdf>  
+  <sdf version="1.6">model.sdf</sdf>  
 
   <author>
     <name>Taehun Lim(Darby)</name>
     <email>thlim@robotis.com</email>
   </author>
 
-  <description>Small custom box</description>
-
+  <description>Box with texture using embedded mesh</description>
 </model>
